Model Evalution with new data

--- a/Projeto1.ipynb
+++ b/Projeto1.ipynb
@@ -2972,6 +2972,153 @@
     "# R2 Score (R2) - Coefficient of Determination\n",
     "print(\"R2 Score (R2):\", round(r2_score(y_test, y_pred_v3_opt), 6))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testando o Modelo Antes do Deploy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 655,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['United States', 'Master’s degree', 'Developer, full-stack',\n",
+       "        '15']], dtype='<U21')"
+      ]
+     },
+     "execution_count": 655,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# New data generation\n",
+    "new_data = np.array([[\"United States\", 'Master’s degree', 'Developer, full-stack', 15]])\n",
+    "new_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 656,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'United States': 0}, {'Master’s degree': 0}, {'Developer, full-stack': 0})"
+      ]
+     },
+     "execution_count": 656,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mapping the new data in a dictionary\n",
+    "\n",
+    "country_mapping = {country: i for i, country in enumerate(np.unique(new_data[:, 0]))}\n",
+    "education_mapping = {education: i for i, education in enumerate(np.unique(new_data[:, 1]))}\n",
+    "devtype_mapping = {devtype: i for i, devtype in enumerate(np.unique(new_data[:, 2]))}\n",
+    "\n",
+    "country_mapping, education_mapping, devtype_mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['0', '0', '0', '15']], dtype='<U21')"
+      ]
+     },
+     "execution_count": 657,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vectorizing X after mapping the new data\n",
+    "new_data[:, 0] = np.vectorize(country_mapping.get)(new_data[:, 0])\n",
+    "new_data[:, 1] = np.vectorize(education_mapping.get)(new_data[:, 1])\n",
+    "new_data[:, 2] = np.vectorize(devtype_mapping.get)(new_data[:, 2])\n",
+    "\n",
+    "new_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 660,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0., 15.]])"
+      ]
+     },
+     "execution_count": 660,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Converting the new data to float for increased precision\n",
+    "new_data = new_data.astype(float)\n",
+    "new_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 662,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.1372492 , -0.80479739, -1.48278339,  0.82677536]])"
+      ]
+     },
+     "execution_count": 662,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Transforming the new data with the scaler\n",
+    "new_data_scaled = scaler.transform(new_data)\n",
+    "new_data_scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 664,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([136289.3620427])"
+      ]
+     },
+     "execution_count": 664,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Making prediction for the new data\n",
+    "y_pred = rf_opt_model.predict(new_data_scaled)\n",
+    "y_pred"
+   ]
   }
  ],
  "metadata": {
