Saving model to disk and verifies its execution

--- a/Projeto1.ipynb
+++ b/Projeto1.ipynb
@@ -3119,6 +3119,238 @@
     "y_pred = rf_opt_model.predict(new_data_scaled)\n",
     "y_pred"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Salvar o modelo e mapeamento em disco"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 666,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model': RandomForestRegressor(max_depth=8, min_samples_leaf=5, n_estimators=300,\n",
+       "                       random_state=1),\n",
+       " 'country_mapping': {'Other': 0,\n",
+       "  'United States': 1,\n",
+       "  'India': 2,\n",
+       "  'United Kingdom': 3,\n",
+       "  'Germany': 4,\n",
+       "  'Canada': 5,\n",
+       "  'Brazil': 6,\n",
+       "  'France': 7,\n",
+       "  'Spain': 8,\n",
+       "  'Australia': 9,\n",
+       "  'Netherlands': 10,\n",
+       "  'Poland': 11,\n",
+       "  'Italy': 12,\n",
+       "  'Russian Federation': 13,\n",
+       "  'Sweden': 14},\n",
+       " 'education_mapping': {'Less than a Bachelors': 0,\n",
+       "  'Bachelor’s degree': 1,\n",
+       "  'Master’s degree': 2,\n",
+       "  'Post grad': 3},\n",
+       " 'devtype_mapping': {'Developer, back-end': 0,\n",
+       "  'Developer, full-stack': 1,\n",
+       "  'Database administrator': 2,\n",
+       "  'Developer, front-end': 3,\n",
+       "  'Data or business analyst': 4,\n",
+       "  'Academic researcher': 5,\n",
+       "  'Designer': 6,\n",
+       "  'Developer, desktop or enterprise applications': 7,\n",
+       "  'Data scientist or machine learning specialist': 8,\n",
+       "  'Developer, mobile': 9,\n",
+       "  'Developer, embedded applications or devices': 10,\n",
+       "  'Other': 11,\n",
+       "  'DevOps specialist': 12,\n",
+       "  'Developer, QA or test': 13,\n",
+       "  'Engineer, data': 14,\n",
+       "  'Engineering manager': 15,\n",
+       "  'Developer, game or graphics': 16}}"
+      ]
+     },
+     "execution_count": 666,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_model = {'model': rf_opt_model,\n",
+    "               'country_mapping': map_country,\n",
+    "               'education_mapping': map_ed_level,\n",
+    "               'devtype_mapping': map_dev_type\n",
+    "              }\n",
+    "final_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 667,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model in disk\n",
+    "with open('model.pkl', 'wb') as file:\n",
+    "    pickle.dump(final_model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 668,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the model from disk\n",
+    "with open('model.pkl', 'rb') as file:\n",
+    "    model = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 669,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the standard scaler\n",
+    "with open('scaler.pkl', 'rb') as file:\n",
+    "    scaler = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 670,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract components from file\n",
+    "loaded_model = model['model']\n",
+    "country_mapping = model['country_mapping']\n",
+    "education_mapping = model['education_mapping']\n",
+    "devtype_mapping = model['devtype_mapping']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 671,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data_scaled = scaler.transform(new_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 675,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = loaded_model.predict(new_data_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 676,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The predicted salary is $136289.36\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The predicted salary is ${y_pred[0]:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 677,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Author: Data Science Academy\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%watermark -a \"Data Science Academy\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Retire os comentários das células abaixo e execute para checar as versões dos pacotes na sua máquina."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 678,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python implementation: CPython\n",
+      "Python version       : 3.11.5\n",
+      "IPython version      : 8.15.0\n",
+      "\n",
+      "Compiler    : GCC 11.2.0\n",
+      "OS          : Linux\n",
+      "Release     : 6.12.9-200.fc41.x86_64\n",
+      "Machine     : x86_64\n",
+      "Processor   : \n",
+      "CPU cores   : 2\n",
+      "Architecture: 64bit\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%watermark -v -m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 679,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seaborn   : 0.12.2\n",
+      "matplotlib: 3.7.2\n",
+      "sklearn   : 1.3.0\n",
+      "pandas    : 2.0.3\n",
+      "numpy     : 1.24.3\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%watermark --iversions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fim"
+   ]
   }
  ],
  "metadata": {
